<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text=" Student Database App"
        android:textColor="#6750a4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="The StudentDatabaseApp allows users to manage student data efficiently through four main functions: Add, Update, Delete, and View student records."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="➊  Add Student: Tap the Add Student button, fill out the form with the student's details, and click Submit to store the data."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="➋  Update Student: Tap Update Student, search for the student by name or roll number, modify the necessary details, and press Submit to save the changes."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="➌  Delete Student: Select Delete Student, find the student you want to remove, and confirm the deletion."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="➍  View Student Records: Tap View Student Records to see a list of all students. Click on any student’s name to view detailed information."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="105dp"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:text="This app simplifies student data management with an easy-to-navigate interface."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_student" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_student" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete Student" />

    <Button
        android:id="@+id/retrieveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Retrieve Students" />

    <TextView
        android:id="@+id/retrieveTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/retrieved_data_will_appear_here"
        android:visibility="gone" />

</LinearLayout>
